--- a/works.html
+++ b/works.html
@@ -1,112 +1,108 @@
 <!doctype html>
 <html lang="ja">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="utf-8">
   <title>制作について | NUAD（日大広研）</title>
-  <link rel="stylesheet" href="css/activity.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;700&family=Cormorant+Garamond:ital,wght@0,300;0,600;1,300&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/activity.css">
 </head>
 
 <body>
+
+  <!-- Header -->
   <header class="site-header">
-  <div class="container site-header__inner">
-    <a href="index.html">
-      <img src="img/広研ロゴ05.png" alt="NUADロゴ" class="site-header__logo">
-    </a>
+    <div class="container site-header__inner">
+      <a href="index.html">
+        <img src="img/広研ロゴ05.png" alt="NUADロゴ" class="site-header__logo">
+      </a>
+      <nav class="site-nav">
+        <ul class="nav__list">
+          <li class="nav__item"><a href="index.html" class="nav__link">トップ</a></li>
+          <li class="nav__item"><a href="works.html" class="nav__link">制作</a></li>
+          <li class="nav__item"><a href="events.html" class="nav__link">イベント</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-    <nav class="site-nav">
-      <ul class="nav__list">
-        <li class="nav__item">
-          <a href="index.html" class="nav__link">トップ</a>
-        </li>
-        <li class="nav__item">
-          <a href="works.html" class="nav__link">制作</a>
-        </li>
-        <li class="nav__item">
-          <a href="events.html" class="nav__link">イベント</a>
-        </li>
-      </ul>
-    </nav>
+  <!-- Page Hero -->
+  <div class="page-hero" data-label="CREATION">
+    <div class="page-hero__inner">
+      <span class="page-hero__label">Works</span>
+      <h1 class="page-hero__title">制作</h1>
+    </div>
   </div>
-</header>
 
+  <!-- Creation Section -->
   <div class="creation-section" id="works">
- <h2 class="creation-title">制作</h2>
-          <p class="creation-text">
-            広告作品にはCF,RA,SP,WP,GRこのような5つの媒体があります！
-          </p>
-  <div class="container">
-    <div class="row top-row">
-      <div class="item">
-       <span class="item-title">CF<br>(コマーシャルフィルム)
-       </span>
-       <img src="img/CF.jpg" alt="CF"
-        class="item-image">
-        <p class="item-description">テレビCMのような映像広告を作る媒体</p>
+    <h2 class="creation-title">制作</h2>
+    <p class="creation-text">
+      広告作品にはCF,RA,SP,WP,GRこのような5つの媒体があります！
+    </p>
+    <div class="container">
+      <div class="row top-row">
+        <div class="item">
+          <span class="item-title">CF<br>(コマーシャルフィルム)</span>
+          <img src="img/CF.jpg" alt="CF" class="item-image">
+          <p class="item-description">テレビCMのような映像広告を作る媒体</p>
+        </div>
+        <div class="item">
+          <span class="item-title">GR<br>（グラフィック）</span>
+          <img src="img/GR.jpg" alt="GR" class="item-image">
+          <p class="item-description">チラシやポスターなどの静止画を<br>取り扱う媒体</p>
+        </div>
+        <div class="item">
+          <span class="item-title">RA<br>(ラジオ)</span>
+          <img src="img/RA.jpg" alt="RA" class="item-image">
+          <p class="item-description">音のみで構成され、聞き手の印象を<br>追求する媒体</p>
+        </div>
       </div>
-      <div class="item">
-        <span class="item-title">GR<br>（グラフィック）
-        </span>
-        <img src="img/GR.jpg" alt="GR"
-        class="item-image">
-        <p class="item-description">チラシやポスターなどの静止画を<br>
-          取り扱う媒体</p>
-      </div>
-      <div class="item">
-        <span class="item-title">RA<br>(ラジオ) 
-        </span>
-        <img src="img/RA.jpg" alt="RA"
-        class="item-image">
-        <p class="item-description">音のみで構成され、聞き手の印象を<br>
-          追求する媒体</p>
+      <div class="row bottom-row">
+        <div class="item">
+          <span class="item-title">SP<br>(セールスプロモーション)</span>
+          <img src="img/SP.jpg" alt="SP" class="item-image">
+          <p class="item-description">「販売促進」を意味し、広告の基礎となる媒体</p>
+        </div>
+        <div class="item">
+          <span class="item-title">WP<br>(ウェブプロモーション)</span>
+          <img src="img/WP.jpg" alt="WP" class="item-image">
+          <p class="item-description">企画やデザインを自ら練り、<br>ウェブサイトを作る媒体</p>
+        </div>
       </div>
     </div>
-    <div class="row bottom-row">
-      <div class="item">
-        <span class="item-title">SP<br>(セールスプロモーション) 
-        </span>
-        <img src="img/SP.jpg" alt="SP"
-        class="item-image">
-        <p class="item-description">「販売促進」を意味し、広告の基礎となる媒体</p>
-      </div>
-      <div class="item">
-        <span class="item-title">WP<br>(ウェブプロモーション) 
-        </span>
-        <img src="img/WP.jpg" alt="WP"
-        class="item-image">
-        <p class="item-description">企画やデザインを自ら練り、<br>
-          ウェブサイトを作る媒体</p>
+
+    <h2 class="creation-title">参加大会</h2>
+    <div class="two-competition">
+      <div class="competition">
+        <img src="img/東広連.png" alt="東広連" class="competition-img">
+        <p class="competition-text">
+          <strong>【概要】</strong><br>
+          東京学生広告研究団体連盟、通称東広連が主催する
+          学生広告展では、予選から勝ち上がった人だけが、
+          オリンピックセンターという大きな会場で発表することができます！<br>
+          <strong>【媒体】</strong><br>
+          広告5媒体（CF,SP,GR,WEB,RA）<br>
+          <strong>【魅力】</strong><br>
+          現役で広告業界で活躍されているプロの方から
+          作品に対する評価をしてもらえるということ！<br><br>
+          詳しくは<a href="https://www.toukouren.net/about">東京学生広告研究団体連盟公式サイト</a>で検索！
+        </p>
       </div>
     </div>
   </div>
 
- <h2 class="creation-title">参加大会</h2>
-  <div class="two-competition">
-   <div class="competition">
-         <img src="img/東広連.png" alt="東広連"
-         class="competition-img">
-         <p class="competition-text">
-            <strong class="competition-label">【概要】</strong><br>
-            東京学生広告研究団体連盟、通称東広連が主催する
-            学生広告展では、予選から勝ち上がった人だけが、
-            オリンピックセンターという大きな会場で発表することができます！<br>
-           <strong class="competition-label">【媒体】</strong><br>
-            広告5媒体（CF,SP,GR,WEB,RA）<br>
-           <strong class="competition-label">【魅力】</strong><br>
-            現役で広告業界で活躍されているプロの方から
-            作品に対する評価をしてもらえるということ！<br><br>
-            詳しくは<a href="https://www.toukouren.net/about">東京学生広告研究団体連盟公式サイト</a>で検索！
-         </p>
-   </div>
-  </div>
-
+  <!-- Footer -->
   <footer class="site-footer">
-      <div class="footer-credit">Photo by 広研カメラ男子</div>
-      <div class="footer-copy">© NUAD 2026</div>
+    <div class="footer-credit">Photo by 広研カメラ男子</div>
+    <div class="footer-copy">© NUAD 2026</div>
   </footer>
 
   <a href="#" class="pagetop" aria-label="ページの先頭へ戻る"></a>
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script src="js/activity.js"></script>
 </body>
 </html>
